--- a/src/components/NewExpense/ExpenseForm.css
+++ b/src/components/NewExpense/ExpenseForm.css
@@ -24,3 +24,14 @@
 .new-expense__actions {
   text-align: right;
 }
+
+#expense-form.show {
+  overflow: hidden;
+  transition: height 0.8s ease-out;
+}
+
+#expense-form.hide {
+  overflow: hidden;
+  transition: height 0.8s ease-out;
+  
+}
